Fix small-page title mis-alignment

--- a/website/thaliawebsite/static/css/base.scss
+++ b/website/thaliawebsite/static/css/base.scss
@@ -213,8 +213,8 @@ body {
 
             @media(min-width: 992px) {
                 &.center-lg-50 {
-                    padding-left: calc(25% + 6px);
-                    padding-right: calc(25% + 6px);
+                    padding-left: 25%;
+                    padding-right: 25%;
                     width: auto;
                 }
             }
